--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,3 @@
 {
-  "require": {
-    "phalcon/phalcon": "^5.0",
-    "swoole/ide-helper": "^4.5"
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "scripts": {
-    "post-install-cmd": [
-      "Phalcon\\DevTools\\Installer::install"
-    ],
-    "post-update-cmd": [
-      "Phalcon\\DevTools\\Installer::install"
-    ]
-  }
+  "phalcon/phalcon": "^5.0.0"
 }
